--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 胜利一中模拟联合国协会
 SEOTitle: SLYZMUN
-header-img: img/slyzmun_logo.png
+header-img: img/slyzmun_header_img.png
 email: klovien@gmail.com
 description: "胜利一中模拟联合国协会"
 keyword: "胜利一中,胜利第一中学,模拟联合国,MUN,山东,东营,中学生社团"
