--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 胜利一中模拟联合国协会
+title: 胜利一中模联协会
 SEOTitle: SLYZMUN
 header-img: img/slyzmun_header_img.png
 email: klovien@gmail.com
 description: "胜利一中模拟联合国协会"
-keyword: "胜利一中,胜利第一中学,模拟联合国,MUN,山东,东营,中学生社团"
+keyword: "胜利一中,胜利第一中学,模拟联合国,模联,MUN,山东,东营,中学生社团"
 url: "https://slyzmun.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/slyzmun/slyzmun.github.io.git" # you code repository
