--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 胜利一中模联协会
+title: 胜利一中模拟联合国协会
 SEOTitle: SLYZMUN
 header-img: img/slyzmun_header_img.png
 email: klovien@gmail.com
