--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 胜利一中模联协会
 SEOTitle: SLYZMUN
 header-img: img/slyzmun_header_img.png
-email: klovien@gmail.com
+email: slyzmun@outlook.com
 description: "胜利一中模联协会"
 keyword: "胜利一中,胜利第一中学,模拟联合国,模联,MUN,山东,东营,中学生社团"
 url: "https://slyzmun.github.io"          # your host, for absolute URL
@@ -11,7 +11,7 @@ github_repo: "https://github.com/slyzmun/slyzmun.github.io.git" # you code repos
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you're going to be!"
+sidebar-about-description: "从胜利出发，与世界对话"
 sidebar-avatar: /img/slyzmun_logo.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
