--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 胜利一中模拟联合国协会
 SEOTitle: SLYZMUN
-header-img: img/slyzmun_header_img.png
+header-img: img/slyzmun_header_img.webp
 email: slyzmun@outlook.com
 description: "胜利一中模拟联合国协会"
 keyword: "胜利一中,胜利第一中学,模拟联合国,模联,MUN,山东,东营,中学生社团"
@@ -12,7 +12,7 @@ github_repo: "https://github.com/slyzmun/slyzmun.github.io.git" # you code repos
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "从胜利出发，与世界对话"
-sidebar-avatar: /img/slyzmun_logo.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/slyzmun_logo.webp      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
