--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/slyzmun/slyzmun.github.io.git" # you code repos
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "——从胜利出发，与世界对话"
+sidebar-about-description: "—— “从胜利出发，与世界对话”"
 sidebar-avatar: /img/slyzmun_logo.webp      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
