--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,17 @@
 title: 胜利一中模拟联合国协会
 SEOTitle: SLYZMUN
 header-img: img/slyzmun_header_img.webp
-email: slyzmun@outlook.com
-QQ: "507227969"
 description: "胜利一中模拟联合国协会"
 keyword: "胜利一中,胜利第一中学,模拟联合国,模联,MUN,山东,东营,中学生社团"
 url: "https://slyzmun.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/slyzmun/slyzmun.github.io.git" # you code repository
+
+# email: slyzmun@outlook.com
+# QQ: "507227969"
+
+
+
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
