--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 top-scroll-bar-control: true  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 公告：欢迎访问胜利一中模拟联合国协会官方网站！本站近期正在逐步进行建设中，敬请期待~"  # 字条内容
 
-site-run-date: "2025-03-23"  # 本次开始运行日期，格式yyyy-mm-dd
-site-run-time: "09:23:46"  # 本次开始运行时间，格式hh:mm:ss
+site-run-date: 2025-03-23  # 本次开始运行日期，格式yyyy-mm-dd
+site-run-time: 09:23:46  # 本次开始运行时间，格式hh:mm:ss
 
 
 # 以下内容禁止修改！！！————————————————————————————————————————————————————————————————————————————————————————————————————————
