--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 top-scroll-bar-control: true  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 公告：欢迎访问胜利一中模拟联合国协会官方网站！本站近期正在逐步进行建设中，敬请期待~"  # 字条内容
 
-site_run_time: 2025-03-23T09:23:46  # 本次开始运行日期和时间，格式yyyy-mm-ddThh:mm:ss
+# site_run_time: 2025-03-23T09:23:46  # 本次开始运行日期和时间，格式yyyy-mm-ddThh:mm:ss
 
 
 # 以下内容禁止修改！！！————————————————————————————————————————————————————————————————————————————————————————————————————————
