--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-site-general-control: true  # 全站开关（true/false），默认开启true
+site-general-control: true  # 全站开关（true/false），默认开启true，维护时false
 top-scroll-bar-control: true  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 欢迎访问胜利一中模拟联合国协会官网！网站初期建设正稳步推进，更多精彩，敬请期待！"  # 字条内容
 
