--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 site-general-control: true  # 全站开关（true/false），默认开启true，维护时false
-site-data-control: -1000  # 全站统计数据清零工具（0为实际值）
+site-pv-data-control: -1000  # 全站访问量统计数据清零工具（0为实际值）
+site-uv-data-control: -20  # 全站访客数统计数据清零工具（0为实际值）
 top-scroll-bar-control: true  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 欢迎访问胜利一中模拟联合国协会官网！网站初期建设正稳步推进，更多精彩，敬请期待！"  # 字条内容
 
