--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,20 @@
 site-general-control: true  # 全站开关（true/false），默认开启true，维护时false
 
-site-pv-data-control: -1000  # 全站访问量数据清零（0为实际值）
-site-uv-data-control: -20  # 全站访客数数据清零（0为实际值）
 
 top-scroll-bar-control: true  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 欢迎访问胜利一中模拟联合国协会官网！网站初期建设正稳步推进，更多精彩，敬请期待！"  # 字条内容
 
+floating-window-control: true  # 广告飘窗显示/隐藏（true/false）
+floating-window-content: 20250327飘窗测试  # 广告飘窗文字内容
+floating-window-link: https://www.baidu.com/  # 广告飘窗超链接
+
+
 # 超链接模板：<a href="https://example.com">点击这里访问示例网站</a>
 
 # site_run_time: 2025-03-23T09:23:46  # 本次开始运行日期和时间，格式yyyy-mm-ddThh:mm:ss
+
+# site-pv-data-control: -1000  # 全站访问量数据清零（0为实际值）
+# site-uv-data-control: -20  # 全站访客数数据清零（0为实际值）
 
 
 # 以下内容禁止修改！！！————————————————————————————————————————————————————————————————————————————————————————————————————————
