--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ floating-window-control: true  # 广告飘窗显示/隐藏（true/false）
 floating-window-content: 20250327飘窗测试  # 广告飘窗文字内容
 floating-window-link: https://www.baidu.com/  # 广告飘窗超链接
 
+floating-window-speed: 2    # 运动速度（推荐1-3，默认2）
+floating-window-angle: 45   # 初始角度（推荐30-60，默认45）
+floating-window-x: 50       # 初始水平位置（默认50px）
+floating-window-y: 50       # 初始垂直位置（默认50px）
+
 
 # 超链接模板：<a href="https://example.com">点击这里访问示例网站</a>
 
