--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ top-scroll-bar-control: true  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 欢迎访问胜利一中模拟联合国协会官网！网站初期建设正稳步推进，更多精彩，敬请期待！"  # 字条内容
 
 # 左侧广告飘窗设置
-floating-window-control: false  # 广告总开关
+floating-window-control: true  # 广告总开关
 floating-window-img: "/img/dymun_entrance.webp"    # 广告图片路径，没有则填none
 floating-window-content: "DYMUN<br>报名通道"  # 广告文字内容
 floating-window-link: "/dymun"      # 跳转链接内容
