--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ top-scroll-bar-control: true  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 欢迎访问胜利一中模拟联合国协会官网！网站初期建设正稳步推进，更多精彩，敬请期待！"  # 字条内容
 
 # 开屏提示窗口设置
-
+center-window-title: 公告
+center-window-content: 欢迎访问胜利一中模拟联合国协会官网！<br>网站初期建设正稳步推进，更多精彩，敬请期待！
 
 # 左侧广告飘窗设置
 floating-window-control: false  # 广告总开关（默认关闭）
