--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ site-general-control: true  # 全站开关（true/false），默认开启true，
 
 top-scroll-bar-control: false  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 欢迎访问胜利一中模拟联合国协会官网！网站初期建设正稳步推进，更多精彩，敬请期待！"  # 字条内容
+# 🔈 欢迎访问胜利一中模拟联合国协会官网！网站初期建设正稳步推进，更多精彩，敬请期待！
+# 🔈 预祝DYMUN东营市中学生模拟联合国协会2025年度夏季会议圆满成功！
 
 # 左侧广告飘窗设置
 floating-window-control: false  # 广告总开关（默认关闭）
