--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-site-general-control: false  # 全站开关（true/false），默认开启true，维护时false
+site-general-control: true  # 全站开关（true/false），默认开启true，维护时false
 
-# 报名通道开关
-sign-up-control: true  # true为打开，false为关闭（默认关闭）
+# 报名通道开关（为确保功能正常，两个变量请写同一个值，不要出现一个true一个false）
+sign-up-button: false  # 首页报名按钮开关，true为打开，false为关闭（默认关闭）
+sign-up-control: false  # 落地页开关，true为打开，false为关闭（默认关闭）
 
 top-scroll-bar-control: false  # 顶部循环字条显示/隐藏（true/false）
 top-scroll-bar: "🔈 欢迎访问胜利一中模拟联合国协会官网！网站初期建设正稳步推进，更多精彩，敬请期待！"  # 字条内容
