--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ floating-window-link: "/dymun"      # 跳转链接内容
 # Site settings
 title: EthanKent
 SEOTitle: EthanKent
-header-img: img/slyzmun_header_img.webp
+header-img: img/main/header_img.webp
 description: "EthanKent的博客"
 keyword: "科技,网络,平面设计,艺术,个人博客"
 url: "https://ethan-kent.github.io/"          # your host, for absolute URL
@@ -39,7 +39,7 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "EthanKent"
-sidebar-avatar: /img/slyzmun_logo.webp      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/main/logo.webp      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # SNS settings
 RSS: false
@@ -119,9 +119,4 @@ friends: [
 #     },{
 #         title: "MMUN模联峰会",
 #         href: "https://www.unischool.cn/hdss/mnlhgqsnfh/"
-
-
-
-
-
 
