--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,13 @@ friends: [
     {
         title: "胜利第一中学",
         href: "http://www.sldyzx.cn/"
+    
+    },{
+        title: "云湖社交软件",
+        href: "https://www.yhchat.com/"
+        
     }
+    
 ]
 
 
